--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,24 @@ font-family: 'Roboto', sans-serif; */
     --logo-font: "Raleway", sans-serif;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
 .list {
     list-style: none;
 }
@@ -36,6 +54,29 @@ body {
     color: var(--main-text-color);
     font-family: var(--main-font);
 }
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    outline: 1px solid tomato;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
  
 /* ============= COMPONENTS ============= */
 
@@ -51,8 +92,22 @@ body {
 /* ============= END COMPONENTS ============= */
 
 /* ============= HEADER ============= */
+
+.page-header > .container {
+    display:flex;
+    align-items: center;
+}
+
+.page-header .navigation {
+    display: flex;
+}
+
 .logo {
+    margin-right: 93px;
+    background-color: red;
+
     color: #000000;
+
     font-family: var(--logo-font);
     font-size: 26px;
     font-weight: 700;
@@ -64,8 +119,26 @@ body {
     color: var(--accent-color);
 }
 
+.navigation-list {
+    display: flex;
+    align-items: center;
+}
+
+.navigation-list > .item {
+}
+
+.navigation-list > .item:not(:last-child) {
+    margin-right: 50px;
+}
+
+/* NEEDS REVIEWING PROBLEM WITH PADDING */
 .navigation-list-link {
+    display: block;
+    padding-top: 32;
+    padding-top: 32;
+
     color:var(--secondary-text-color);
+
     font-size: 14px;
     font-weight: 500;
     line-height: 1.14;
@@ -81,8 +154,21 @@ body {
     color: var(--accent-color);
 }
 
+.contacts-list {
+    display: flex;
+    margin-top: 32px;
+    margin-bottom: 32px;
+    margin-left: auto;
+    outline: 1px solid blue;
+}
+
+.contacts-list > .item:not(:last-child) {
+    margin-right: 50px;
+}
+
 .contacts-list-link {
     color: var(--main-text-color);
+    
     font-size: 14px;
     font-weight: 500;
     line-height: 1.14;
@@ -100,26 +186,34 @@ body {
 
 .hero {
     background-color: var(--footer-color);
+
+    text-align: center;
 }
 
 .hero-title {
     color: var(--background-color);
+
     font-size: 44px;
     font-weight: 900;
     line-height: 1.36;
     letter-spacing: 0.06em;
-    text-align: center;
 }
 
 .hero-button {
-    font-family: var(--main-font);
+    border-radius: 4px;
+    padding: 10px 32px;
+    min-width: 200px;
+
     color: var(--background-color);
+    background-color: var(--accent-color);
+
+    font-family: var(--main-font);
     font-size: 16px;
     font-weight: 700;
     line-height: 1.88;
     letter-spacing: 0.06em;
     text-align: center;
-    background-color: var(--accent-color); 
+ 
     cursor: pointer;
 }
 
@@ -131,6 +225,14 @@ body {
 /* ============= END HERO ============= */
 
 /* ============= VALUES ============= */
+
+.values-list {
+    display: flex;
+}
+
+.values-list > .item {
+
+}
 
 .values-list-title {
     color: var(--secondary-text-color);
