--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,8 @@ font-family: 'Roboto', sans-serif; */
     --footer-color: #2F303A;
     --filter-button-color: #F5F4FA;
     --button-accent-color: #188CE8;
+    --logo-black-color: #000000;
+    --header-border-color: #ECECEC;
     --main-font: "Roboto", sans-serif;
     --logo-font: "Raleway", sans-serif;
 }
@@ -58,10 +60,9 @@ body {
 .container {
     margin-left: auto;
     margin-right: auto;
-    width: 1170px;
+    width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
-    outline: 1px solid tomato;
 }
 
 .visually-hidden {
@@ -89,9 +90,18 @@ body {
     text-align: center;
  }
 
+ .section {
+     padding-top: 94px;
+     padding-bottom: 94px;
+ }
+
 /* ============= END COMPONENTS ============= */
 
 /* ============= HEADER ============= */
+
+.page-header {
+    border-bottom: 1px solid var(--header-border-color);
+}
 
 .page-header > .container {
     display:flex;
@@ -100,14 +110,13 @@ body {
 
 .page-header .navigation {
     display: flex;
+    align-items: center;
 }
 
 .logo {
     margin-right: 93px;
-    background-color: red;
 
-    color: #000000;
-
+    color: var(--logo-black-color);
     font-family: var(--logo-font);
     font-size: 26px;
     font-weight: 700;
@@ -121,21 +130,16 @@ body {
 
 .navigation-list {
     display: flex;
-    align-items: center;
-}
-
-.navigation-list > .item {
 }
 
 .navigation-list > .item:not(:last-child) {
     margin-right: 50px;
 }
 
-/* NEEDS REVIEWING PROBLEM WITH PADDING */
 .navigation-list-link {
     display: block;
-    padding-top: 32;
-    padding-top: 32;
+    padding-top: 32px;
+    padding-bottom: 32px;
 
     color:var(--secondary-text-color);
 
@@ -159,7 +163,6 @@ body {
     margin-top: 32px;
     margin-bottom: 32px;
     margin-left: auto;
-    outline: 1px solid blue;
 }
 
 .contacts-list > .item:not(:last-child) {
@@ -186,13 +189,13 @@ body {
 
 .hero {
     background-color: var(--footer-color);
-
     text-align: center;
 }
 
 .hero-title {
-    color: var(--background-color);
+    margin-bottom: 30px;
 
+    color: var(--background-color);
     font-size: 44px;
     font-weight: 900;
     line-height: 1.36;
@@ -206,7 +209,6 @@ body {
 
     color: var(--background-color);
     background-color: var(--accent-color);
-
     font-family: var(--main-font);
     font-size: 16px;
     font-weight: 700;
@@ -230,11 +232,13 @@ body {
     display: flex;
 }
 
-.values-list > .item {
-
+.values-list > .item:not(:last-child) {
+    margin-right: 30px;
 }
 
 .values-list-title {
+    margin-bottom: 10px;
+
     color: var(--secondary-text-color);
     font-size: 14px;
     line-height: 1.14;
@@ -249,13 +253,59 @@ body {
 
 /* ============= END VALUES ============= */
 
+/* ============= ACTIVITY ============= */
+.activity {
+    padding-top: 0;
+}
+
+.activity .section-title {
+    margin-bottom: 50px;
+}
+
+.activity-list {
+    display:flex;
+}
+
+.activity-list > .item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.activity .image {
+    display: block;
+}
+
+/* ============= END ACTIVITY ============= */
+
 /* ============= TEAM ============= */
 
 .team {
     background-color: var(--secondary-background-color);
 }
 
+.team  .section-title {
+    margin-bottom: 50px;
+}
+
+.team-list {
+    display: flex;
+}
+
+.team-list-item {
+    padding-bottom: 30px;
+}
+
+.team-list-item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.team-list-item-image {
+    display: block;
+    margin-bottom: 30px;
+}
+
 .team-list-item-title {
+    margin-bottom: 10px;
+
     color: var(--secondary-text-color);
     font-size: 16px;
     font-weight: 500;
@@ -275,7 +325,21 @@ body {
 
 /* ============= PORTFOLIO ============= */
 
+.filter-list {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.filter-list > .item:not(:last-child) {
+    margin-right: 8px;
+}
+
 .filter-button {
+    padding: 6px 22px;
+    border: transparent;
+    border-radius: 4px;
+
     font-family: var(--main-font);
     color: var(--secondary-text-color);
     background-color: var(--filter-button-color);
@@ -293,7 +357,27 @@ body {
     background-color: var(--accent-color);
 }
 
+.examples-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+}
+
+.examples-list-item {
+    margin: 15px;
+    padding-bottom: 20px;
+    /* flex-basis: calc((100%-60px)/3); */
+}
+
+.examples-list-item-image {
+    display: block;
+    margin-bottom: 20px;
+}
+
 .examples-list-item-title {
+    margin-bottom: 4px;
+    padding-left: 24px;
+
     color: var(--secondary-text-color);
     font-size: 18px;
     line-height: 2;
@@ -304,6 +388,7 @@ body {
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
+    padding-left: 24px;
  }
 
 /* ============= END PORTFOLIO ============= */
@@ -311,11 +396,21 @@ body {
 /* ============= FOOTER ============= */
 
 .footer {
+    padding-top: 60px;
+    padding-bottom: 60px;
+
     background-color: var(--footer-color);
 }
 
 .footer .logo {
-    color:var(--background-color)
+    display: block;
+    margin-bottom: 20px;
+
+    color: var(--background-color);
+}
+
+.contact-information-list > .item.item:not(:last-child) {
+    margin-bottom: 9px;
 }
 
 .contact-information-list-link {
