Прибирає border у кнопках

--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,7 @@ body {
 }
 
 .hero-button {
+    border: 0;
     border-radius: 4px;
     padding: 10px 32px;
     min-width: 200px;
@@ -337,7 +338,7 @@ body {
 
 .filter-button {
     padding: 6px 22px;
-    border: transparent;
+    border: 0px;
     border-radius: 4px;
 
     font-family: var(--main-font);
