--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ font-family: 'Roboto', sans-serif; */
     --button-accent-color: #188CE8;
     --logo-black-color: #000000;
     --header-border-color: #ECECEC;
+    --portfolio-border-color: #EEEEEE;
     --main-font: "Roboto", sans-serif;
     --logo-font: "Raleway", sans-serif;
 }
@@ -188,6 +189,9 @@ body {
 /* ============= HERO ============= */
 
 .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+
     background-color: var(--footer-color);
     text-align: center;
 }
@@ -195,6 +199,7 @@ body {
 .hero-title {
     margin-bottom: 30px;
 
+    text-transform: uppercase;
     color: var(--background-color);
     font-size: 44px;
     font-weight: 900;
@@ -292,7 +297,14 @@ body {
 }
 
 .team-list-item {
-    padding-bottom: 30px;
+    border-radius: 0px 0px 4px 4px;
+    background-color: var(--background-color);
+
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.team-list-item .text-content {
+    padding: 30px 32px;
 }
 
 .team-list-item:not(:last-child) {
@@ -301,7 +313,6 @@ body {
 
 .team-list-item-image {
     display: block;
-    margin-bottom: 30px;
 }
 
 .team-list-item-title {
@@ -370,14 +381,19 @@ body {
     /* flex-basis: calc((100%-60px)/3); */
 }
 
+.examples-list-item .text-content {
+    padding: 20px 24px;
+    border-right: 1px solid var(--portfolio-border-color);
+    border-bottom: 1px solid var(--portfolio-border-color);
+    border-left: 1px solid var(--portfolio-border-color); 
+}
+
 .examples-list-item-image {
     display: block;
-    margin-bottom: 20px;
 }
 
 .examples-list-item-title {
     margin-bottom: 4px;
-    padding-left: 24px;
 
     color: var(--secondary-text-color);
     font-size: 18px;
@@ -389,7 +405,6 @@ body {
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
-    padding-left: 24px;
  }
 
 /* ============= END PORTFOLIO ============= */
